# stats-web

./: Dockerfile  README.md  pyproject.toml
deploy/k8s/: stats-web.yaml
src/statsweb/: app.py
src/statsweb/static/: app.css
