[project]
name = "statsweb"
version = "0.1.0"
description = "Cross-site visitor rollup over self-hosted Umami (stats.kardol.us)"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statsweb"]
